[package]
name = "captra"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/kristoferssolo/captra"
description = "Deterministic WASM plugin host with traceable repros"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "sandbox", "capabilities", "plugins", "traces"]
categories = ["cryptography::randomness", "encoding"]

[dependencies]
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
claims = "0.8"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
