[package]
name = "captra"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/kristoferssolo/captra"
description = "Deterministic WASM plugin host with traceable repros"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "sandbox", "capabilities", "plugins", "traces"]
categories = ["cryptography::randomness", "encoding"]

[dependencies]
color-eyre = "0.6"
glob = "0.3"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
claims = "0.8"
tempfile = "3.23"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
